fix: spacing and dividers

--- a/dokka-subprojects/plugin-base/src/main/resources/dokka/styles/style.css
+++ b/dokka-subprojects/plugin-base/src/main/resources/dokka/styles/style.css
@@ -184,11 +184,6 @@ img {
 
 /* /---dark theme --- */
 
-.main-content .content > hr {
-    margin: 30px 0;
-    border-top: 3px double #8c8b8b;
-}
-
 .main-content :is(h1, h2) {
     font-weight: 600;
 }
